# vcbblueprint

./: .gitignore  README  README.md  pyproject.toml  vcbblueprint.py
